--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -9,7 +9,7 @@ before:
 builds:
   - env:
       - CGO_ENABLED=0
-      - HOMEBREW_TAP_GITHUB_TOKEN: ${{ secrets.HOMEBREW_TAP_GITHUB_TOKEN }}
+      - HOMEBREW_TAP_GITHUB_TOKEN=${{ secrets.HOMEBREW_TAP_GITHUB_TOKEN }}
     goos:
       - linux
       - windows
