--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,5 +1,7 @@
 # This is an example .goreleaser.yml file with some sensible defaults.
 # Make sure to check the documentation at https://goreleaser.com
+env:
+  - HOMEBREW_TAP_GITHUB_TOKEN=${{ secrets.HOMEBREW_TAP_GITHUB_TOKEN }}
 before:
   hooks:
     # You may remove this if you don't use go modules.
@@ -9,7 +11,6 @@ before:
 builds:
   - env:
       - CGO_ENABLED=0
-      - HOMEBREW_TAP_GITHUB_TOKEN=${{ secrets.HOMEBREW_TAP_GITHUB_TOKEN }}
     goos:
       - linux
       - windows
