--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,7 +1,5 @@
 # This is an example .goreleaser.yml file with some sensible defaults.
 # Make sure to check the documentation at https://goreleaser.com
-env:
-  - HOMEBREW_TAP_GITHUB_TOKEN=${{ secrets.HOMEBREW_TAP_GITHUB_TOKEN }}
 before:
   hooks:
     # You may remove this if you don't use go modules.
@@ -95,7 +93,7 @@ brews:
 
       # Optionally a token can be provided, if it differs from the token
       # provided to GoReleaser
-      token: "{{ .Env.HOMEBREW_TAP_GITHUB_TOKEN }}"
+      # token: "{{ .Env.HOMEBREW_TAP_GITHUB_TOKEN }}"
 
       # Sets up pull request creation instead of just pushing to the given branch.
       # Make sure the 'branch' property is different from base before enabling
