--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -46,7 +46,7 @@ brews:
     #
     # Default: ProjectName
     # Templates: allowed
-    name: codassistant
+    name: codeassistant
 
     # IDs of the archives to use.
     # Empty means all IDs.
@@ -119,7 +119,7 @@ brews:
     # Allows you to set a custom download strategy. Note that you'll need
     # to implement the strategy and add it to your tap repository.
     # Example: https://docs.brew.sh/Formula-Cookbook#specifying-the-download-strategy-explicitly
-    #download_strategy: CurlDownloadStrategy
+    download_strategy: CurlDownloadStrategy
 
     # Allows you to add a custom require_relative at the top of the formula
     # template.
