Changed to release

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -119,7 +119,7 @@ brews:
     # Allows you to set a custom download strategy. Note that you'll need
     # to implement the strategy and add it to your tap repository.
     # Example: https://docs.brew.sh/Formula-Cookbook#specifying-the-download-strategy-explicitly
-    download_strategy: ":github_private_repo"
+    download_strategy: ":github_private_release"
 
     # Allows you to add a custom require_relative at the top of the formula
     # template.
