--- a/web/package.json
+++ b/web/package.json
@@ -1,4 +1,6 @@
 {
+  "homepage": "https://github.com/SPANDigital/codeassistant#readme",
+  "license" : "MIT",
   "devDependencies": {
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
