--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,8 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.1",
+    "string-similarity": "^4.0.4"
   }
 }
