--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
     "react-router-dom": "^6.11.1",
     "string-similarity": "^4.0.4"
   }
