--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://github.com/SPANDigital/codeassistant#readme",
-  "license" : "MIT",
+  "license": "MIT",
   "devDependencies": {
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
@@ -8,7 +8,14 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
+    "react-router-dom": "^6.11.1",
+    "string-similarity": "^4.0.4"
   }
 }
