--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,7 +15,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '18.16'
+    - name: "Install Web Dependencies"
+      run: |
+        cd web
+        yarn install
+    - name: "Build Web"
+      run: |        
+        cd web
+        yarn build
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
