--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,18 @@ jobs:
         with:
           fetch-depth: 0
       - run: git fetch --force --tags
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '18.16'
+      - name: "Install Web Dependencies"
+        run: |
+          cd web
+          yarn install
+      - name: "Build Web"
+        run: |        
+          cd web
+          yarn build
       - uses: actions/setup-go@v4
         with:
           go-version: stable
