--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,10 +23,10 @@ jobs:
       run: |
         cd web
         yarn install
-    - name: "Build Web"
+    - name: "Build Web with Parcel"
       run: |        
         cd web
-        yarn build
+        yarn parcel build
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
