--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,10 +27,10 @@ jobs:
         run: |
           cd web
           yarn install
-      - name: "Build Web"
+      - name: "Build Web with Parcel"
         run: |        
           cd web
-          yarn build
+          yarn parcel build
       - uses: actions/setup-go@v4
         with:
           go-version: stable
