--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,7 +26,7 @@ jobs:
     - name: "Build Web with Parcel"
       run: |        
         cd web
-        yarn parcel build
+        yarn parcel build src/index.html --public-url ./
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
