--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
       - name: "Install Parcel"
         run: |
           cd web
-          yarn add --dev parcel
+          yarn parcel build src/index.html --public-url ./
       - name: "Build Web with Parcel"
         run: |        
           cd web
